# 2gis_test

./: CMakeLists.txt  Readme.md  main.cpp
android/: AndroidManifest.xml
resources/: 2gis.rc  resources.qrc
resources/qml/: Main.qml  Settings.qml  qmldir
resources/qml/Base/: AppBottomSheet.qml  AppLoader.qml  AppPage.qml  AppWindow.qml  PageLoader.qml
resources/qml/Components/: AppBottomSheet.qml  AppTopBar.qml  PageLoader.qml  StatusBar.qml
resources/qml/Pages/: HomePage.qml  Options.qml  WelcomeScreen.qml
resources/qml/States/: AppHeader.qml  BottomSheet.qml
sources/: CMakeLists.txt  main.cpp
sources/core/: CMakeLists.txt  runnable_wrapper.cpp  runnable_wrapper.h  text_parser.cpp  text_parser.h  types.h
sources/qml/: CMakeLists.txt
sources/qml/TextOccurrences/: CMakeLists.txt  text_occurrences.cpp  text_occurrences.h
